--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,12 @@ typings/
 .env
 .env.test
 
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
